changed name of the project

--- a/static/login.html
+++ b/static/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Login — Articly</title>
+  <title>Login — Booky</title>
   <style>
     /* VARIABLES: LIGHT Theme colors */
     :root{
@@ -141,8 +141,8 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <h2>Articly Login</h2>
-      <p class="lead">Sign in to manage your articles.</p>
+      <h2>Booky Login</h2>
+      <p class="lead">Sign in to manage your books.</p>
 
       <form id="login-form">
         <div class="field">
