--- a/static/register.html
+++ b/static/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Register — Articly</title>
+  <title>Register — Booky</title>
 
   <style>
     :root {
@@ -146,7 +146,7 @@
 <body>
   <div class="card">
     <h1>Create your account</h1>
-    <p class="lead">Join Articly to write and manage your articles.</p>
+    <p class="lead">Join Booky to add and manage your books.</p>
 
     <form id="register-form">
       <input name="username" placeholder="Choose a username" required />
